[package]
name = "trem-tauri"
version = "0.0.0"
description = "Taiwan Realtime Earthquake Monitoring"
authors = ["ExpTechTW"]
license = "APGL-3.0"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "cli",
  "clipboard-write-text",
  "http-request",
  "fs-create-dir",
  "fs-read-dir",
  "fs-read-file",
  "fs-write-file",
  "path-all",
  "shell-open",
  "system-tray",
  "window-close",
  "window-hide",
  "window-request-user-attention",
  "window-set-always-on-top",
  "window-set-focus",
  "window-set-skip-taskbar",
  "window-set-title",
  "window-show",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
