[package]
name = "trem-tauri"
version = "0.1.0"
description = "Taiwan Real-time Earthquake Monitoring"
authors = ["ExpTech Studio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-websocket = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0-beta.6"
tauri-plugin-os = "2.0.0-beta.4"
whoami = "1.5.1"
windows = { version = "0.56.0", features = ["Win32_UI_Shell"] }
